2019-12-02  Sihui Liu  <sihui_liu@apple.com>

        Cross-thread version StorageQuotaManager
        https://bugs.webkit.org/show_bug.cgi?id=203971
        <rdar://problem/57290349>

        Reviewed by Chris Dumez.

        * TestWebKitAPI/TestWebKitAPI.xcodeproj/project.pbxproj:
        * TestWebKitAPI/Tests/WebCore/StorageQuotaManager.cpp: Removed as we have a different StorageQuotaManager 
        implementation now.
        * WebKitTestRunner/TestController.cpp: reset StorageQuotaManager's quota between tests.
        (WTR::TestController::resetStateToConsistentValues):
        (WTR::TestController::resetQuota):
        * WebKitTestRunner/TestController.h:

2019-12-02  Saam Barati  <sbarati@apple.com>

        run-jsc should exit with the same signal or exit status that the `jsc` shell does
        https://bugs.webkit.org/show_bug.cgi?id=204778

        Reviewed by Keith Miller.

        * Scripts/run-jsc:

2019-12-02  Aakash Jain  <aakash_jain@apple.com>

        Revert - [EWS] Do not retry layout-tests build if the flaky test failures are also present in clean tree run
        https://bugs.webkit.org/show_bug.cgi?id=204704

        Reverting this, a more generic fix for handling flakiness would be made in Bug 204769.

2019-12-02  Louie Livon-Bemel  <llivonbemel@apple.com>

        Add helper methods for description and equality to text manipulation SPI
        https://bugs.webkit.org/show_bug.cgi?id=204758
        <rdar://problem/57438200>

        Reviewed by Wenson Hsieh.

        Add tests for the new methods. Most are equality tests for various situations, and are moved over from the
        Safari unit tests I had for the category methods that had the same purpose.

        * TestWebKitAPI/Tests/WebKitCocoa/TextManipulation.mm:
        (TestWebKitAPI::TEST):
            - Add test to make sure the content isn't included in the regular -description, but the identifier is. And
              That -debugDescription does include the contents.