@@ -1,3 +1,11 @@
+2019-12-03  Carlos Garcia Campos  <cgarcia@igalia.com>
+
+        Unreviewed. Focus the location bar on CTRL+l in GTK MiniBrowser
+
+        * MiniBrowser/gtk/BrowserWindow.c:
+        (focusLocationBar):
+        (browser_window_init):
+
 2019-12-02  Sihui Liu  <sihui_liu@apple.com>
 
         Cross-thread version StorageQuotaManager
